@@ -5,4 +5,4 @@ const char *bindir="/usr/local/sbin";
 const char *spooldir="/var/spool/leafnode";
 const char *libdir="/etc/leafnode";
 const char *lockfile="/var/lock/news/fetchnews.lck";
-const char *version="2.0b5_ma3";
+const char *version="2.0b5_ma4";
